# XProbot

./: .gitignore
cmd_vel_mux/: package.xml
cmd_vel_mux/include/: cmd_node.h  joy_to_cmd.h
cmd_vel_mux/launch/: cmd_vel_mux.launch.py
cmd_vel_mux/src/: cmd_node.cpp  cmd_vel_mux.cpp
dummy_robot/launch/: dummy_robot.launch.py
dummy_robot/maps/: map.pgm  map.yaml
robot_launch/: CMakeLists.txt  package.xml
robot_launch/config/: amcl_params.yaml  nav2_params.yaml
robot_launch/launch/: sim_view.launch.py
robot_msgs/robot_state_msgs/: package.xml
robot_msgs/robot_state_msgs/msg/: CrossAction.msg  DataToStm32.msg  LinkAction.msg  RunningAction.msg
robot_msgs/robot_task_msgs/: CMakeLists.txt
robot_msgs/robot_task_msgs/msg/: RobotGoal.msg  RobotTaskReq.msg
robot_pose_publisher/: package.xml
src/cmd_vel_mux/: CMakeLists.txt
src/cmd_vel_mux/config/: params.yaml
src/cmd_vel_mux/include/: cmd_vel_mux.h
src/cmd_vel_mux/src/: heart_cmd_node.cpp  joy_to_cmd.cpp
src/dummy_robot/: CMakeLists.txt  package.xml
src/dummy_robot/src/: dummy_robot.cpp
src/launch/: debug_location.launch  loam_location.launch  test.launch
src/motion_control/: CMakeLists.txt  package.xml
src/motion_control/action/: RobotNav.action
src/motion_control/config/: motion_control_indoor.yaml
src/motion_control/include/motion_control/: kalman.hpp  motion_control.hpp
src/motion_control/launch/: motion_control_indoor.launch.py
src/motion_control/msg/: RobotState.msg
src/motion_control/src/: motion_control.cpp  motion_control_node.cpp
src/msgs/robot_state_msgs/: CMakeLists.txt  package.xml
src/msgs/robot_state_msgs/msg/: adjust_action.msg  data_to_stm32.msg  robot_state.msg  running_action.msg
src/msgs/robot_task_msgs/: CMakeLists.txt  package.xml
src/msgs/robot_task_msgs/msg/: robot_goal_list.msg  robot_keep_task_send.msg  robot_navigation_cmd.msg
src/package/base_driver/: CMakeLists.txt  package.xml
src/package/base_driver/include/: base_driver.h
src/package/base_driver/launch/: base_driver.launch
src/package/base_driver/src/: base_driver.cpp
src/package/battery_info/: CMakeLists.txt  package.xml
src/package/battery_info/launch/: battery_info.launch
src/package/battery_info/src/: battery_info.cpp
src/package/boxs_obstacle/: CMakeLists.txt  package.xml
src/package/boxs_obstacle/cfg/: ArmVisualizerConfig.cfg
src/package/boxs_obstacle/config/: boxs_obstacle.yaml
src/package/boxs_obstacle/launch/: boxs_obstacle.launch
src/package/boxs_obstacle/src/: boxs_obstacle_node.cpp
src/package/cmd_vel_mux/: CMakeLists.txt
src/package/cross_control/: CMakeLists.txt  package.xml
src/package/cross_control/action/: CrossBelt.action
src/package/cross_control/launch/: cross_control.launch
src/package/cross_control/src/: cross_control.cpp
src/package/data_convert/: CMakeLists.txt  package.xml
src/package/data_convert/launch/: data_convert.launch
src/package/data_convert/rviz/: point_cloud_merger .rviz
src/package/data_convert/src/: data_convert_node.cpp
src/package/dummy_robot/: CMakeLists.txt  package.xml
src/package/dummy_robot/include/: dummy_robot.h
src/package/dummy_robot/launch/: dummy_robot.launch
src/package/dummy_robot/src/: dummy_robot.cpp
src/package/hins_he_driver/: CMakeLists.txt
src/package/laser_avoidance/: CMakeLists.txt  package.xml
src/package/laser_avoidance/config/: laser_avoidance.yaml
src/package/laser_avoidance/include/laser_avoidance/: laser_avoidance.hpp
src/package/laser_avoidance/launch/: laser_avoidance.launch
src/package/laser_avoidance/src/: laser_avoidance.cpp  laser_avoidance_node.cpp  nodelet.cpp
src/package/led_control/: CMakeLists.txt  package.xml
src/package/led_control/launch/: led_control.launch
src/package/led_control/src/: led_control.cpp
src/package/link_visual/: CMakeLists.txt  package.xml
src/package/link_visual/cfg/: ArmVisualizerConfig.cfg
src/package/link_visual/config/: arm_visual_config_prediction.yaml
src/package/link_visual/launch/: link_visual.launch
src/package/link_visual/rviz/: link_visual.rviz
src/package/link_visual/src/: link_visual_node.cpp
src/package/motion_control/: CMakeLists.txt  package.xml
src/package/move_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/package/navigation_plan/: CMakeLists.txt  package.xml
src/package/obstacle_stop/: CMakeLists.txt  package.xml
src/package/odom/: CMakeLists.txt  package.xml
src/package/point_cloud_merger/: CMakeLists.txt  package.xml
src/package/pointcloud_to_laserscan/: CMakeLists.txt
src/package/pose_init/: CMakeLists.txt  README.md  (+1 more)
src/robot_control/: CMakeLists.txt  package.xml  plugin_control.xml
src/robot_control/include/: robot_control.h
src/robot_control/src/: robot_control.cpp
src/robot_control/ui/: image_viewer.ui
src/robot_launch/: CMakeLists.txt  carto_file  package.xml
src/robot_launch/carto_file/: map_builder_odom.lua  pose_graph.lua  trajectory_builder_2d.lua  trajectory_builder_odom.lua
src/robot_launch/config/: nav2_params.yaml
src/robot_launch/launch/: mapping.launch  move_base.launch  navigation_launch.py  navigation_start.launch.py  real_test.launch  sim.launch  test.launch
src/robot_launch/launch/move_base_navigation/config/: base_local_planner_params.yaml  local_costmap_params.yaml
src/robot_launch/nodes/: my.json
src/robot_launch/rviz/: gui.rviz  sim.rviz
src/robot_launch/script/: back.sh  clear_cpp.sh  github.sh  index.html  install_depend.sh  install_web.sh  make.sh  mapping.bash  rc.local  record_bag.sh  robot.conf  run.bash  start.bash
src/robot_launch/script/robot_view/: 11.html  index.html  style.css
src/robot_launch/script/robot_view/js/: createjs.min.js  easeljs.min.js  eventemitter2.min.js  img_show.js  ros2d.min.js  ros_init.js  roslib.min.js  sensor_control.js  system_cmd.js  talk.js
src/robot_launch/urdf/: indoor.urdf
src/robot_pose_publisher/: CMakeLists.txt
src/robot_pose_publisher/launch/: robot_pose.launch.py
src/robot_pose_publisher/src/: robot_pose_publisher.cpp
src/script/: col.sh  install.sh
src/util/: vir_com.py
(+373 files in other folders)
