<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmd_vel_mux</name>
  <version>1.0.0</version>
  <description>cmd_vel_mux - ROS2 version for velocity command multiplexing</description>

  <maintainer email="hambin.lu@leapting.com">Hambin</maintainer>

  <license>Apache-2.0</license>

  <author>Hambin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  

  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <build_depend>Boost</build_depend>
  <exec_depend>Boost</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
