<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_robot</name>
  <version>1.1.3</version>
  <description>dummy_robot package for ROS 2, simulates a robot's odometry and TF publishing with configurable frame IDs.</description>
  <maintainer email="821022334@qq.com">Hambin</maintainer>
  <license>BSD</license>
  <author email="821022334@qq.com">Hambin</author>

  <!-- ROS 2构建依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 编译依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>robot_state_msgs</build_depend>
  
  <!-- 运行依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 导出配置 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>