<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 核心包信息（完全保留原内容） -->
  <name>motion_control</name>
  <version>1.1.3</version>
  <description>navigation_line.</description>
  <maintainer email="marko.bjelonic@mavt.ethz.ch">Hambin</maintainer>
  <license>BSD</license>
  <author email="marko.bjelonic@mavt.ethz.ch">Hambin</author>

  <!-- ROS 2 构建工具依赖（替代 catkin） -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 核心运行依赖（ROS 1 → ROS 2 映射） -->
  <depend>rclcpp</depend>          <!-- 替代 roscpp -->
  <depend>rclpy</depend>          <!-- 替代 rospy -->
  <depend>std_msgs</depend>       <!-- 保留 -->
  <depend>sensor_msgs</depend>    <!-- 保留 -->
  <depend>geometry_msgs</depend>  <!-- 保留 -->
  <depend>rclcpp_action</depend>  <!-- 替代 actionlib_msgs -->
  <depend>rosidl_default_runtime</depend> <!-- 替代 message_runtime -->
  <depend>Boost</depend>          <!-- 替代 boost（ROS 2 规范大写） -->

  <!-- 可选依赖（根据实际使用情况调整） -->
  <depend>tf2</depend>            <!-- ROS 2 替代 tf -->
  <depend>tf2_ros</depend>        <!-- ROS 2 TF 支持 -->
  <depend>costmap_2d</depend>     <!-- 保留（如果使用代价地图） -->

  <!-- 构建依赖（替代 message_generation） -->
  <build_depend>ament_cmake_python</build_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <!-- 测试依赖（可选） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 移除 ROS 1 特有依赖（无直接替代） -->
  <!-- nodelet: ROS 2 推荐使用组件节点（composition） -->
  <!-- roslaunch: ROS 2 集成在 ament_cmake 中 -->
  <!-- dynamic_reconfigure: ROS 2 使用原生参数系统替代 -->

  <!-- 构建类型声明 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>