<?xml version="1.0"?>
<package format="2">
  <name>robot_launch</name>  
  <version>0.0.0</version>
  <description>仅安装配置文件夹的ROS1包</description>
  <maintainer email="821022334@qq.com">Hambin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>