<?xml version="1.0"?>
<package>
  <name>battery_info</name>
  <version>0.2.4</version>
  <description>A Simple Node to Publish the Robot's Position Relative to the Map using TFs</description>

  <maintainer email="821022334@qq.com">Hambin</maintainer>
  <author email="821022334@qq.com">Hambin</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
</package>
