<?xml version="1.0"?>
<package>
  <name>boxs_obstacle</name>
  <version>0.0.0</version>

  <description>
    plane detect!
  </description>

  <maintainer email="hambin.lu@qq.com">hambin</maintainer>

  <license>BSD</license>

  <author email="hambin.lu@qq.com">hambin</author>
  
  <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roscpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>visualization_msgs</build_depend>
<build_depend>tf2_ros</build_depend>
<build_depend>tf2_geometry_msgs</build_depend>
<build_depend>tf2_eigen</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>pcl_conversions</build_depend>
<build_depend>eigen_conversions</build_depend>

<run_depend>roscpp</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>visualization_msgs</run_depend>
<run_depend>tf2_ros</run_depend>
<run_depend>tf2_geometry_msgs</run_depend>
<run_depend>tf2_eigen</run_depend>
<run_depend>pcl_ros</run_depend>
<run_depend>pcl_conversions</run_depend>
<run_depend>eigen_conversions</run_depend>


</package>
