<?xml version="1.0"?>
<package format="2">
  <name>laser_avoidance</name>
  <version>1.1.3</version>
  <description>laser_avoidance.</description>
  <maintainer email="marko.bjelonic@mavt.ethz.ch">Hambin</maintainer>
  <license>BSD</license>
  <author email="marko.bjelonic@mavt.ethz.ch">Hambin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>roslaunch</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>robot_state_msgs</depend>
 <!-- <depend>database</depend>-->

</package>
